# Fondament

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-guilhem.yml  build.yml
definitions/disciplines/: aporia.yaml  deconstructive.yaml  documentation.yaml  rust-async.yaml
definitions/domains/: amassada.yaml  caissa.yaml  charradissa.yaml  cor.yaml  farga.yaml  fondament.yaml  gardian.yaml  occitan.yaml
definitions/fondament/: amassada-agent.yaml  app-architect.yaml  aws-architect.yaml  axiom-evaluator.yaml  azure-architect.yaml  business-analyst.yaml  caissa-agent.yaml  charradissa-agent.yaml  charradissa-provisioner.yaml  cloud-architect.yaml  code-reviewer.yaml  consult-protocol.md  cor-agent.yaml  corrierr.yaml  data-architect.yaml  developer.yaml  farga-agent.yaml  fondament-agent.yaml  gardian-agent.yaml  gcp-architect.yaml  guilhem.yaml  infra-engineer.yaml  intake-architect.yaml  librarian.yaml  meditation-moderator.yaml  nervi-agent.yaml  project-moderator.yaml  qa-engineer.yaml  review-moderator.yaml  security-analyst.yaml  system-defence.md  tech-moderator.yaml  technical-writer.yaml
definitions/fondament/domains/: project-agent.yaml
definitions/fondament/projects/: example-agent.yaml
definitions/roles/: security-sre.yaml
definitions/skills/caissa/: bug-triage.yaml  epic-acceptance.yaml  epic-design.yaml  initiative-design.yaml  scope-component-orchestrator.yaml  scope-org-orchestrator.yaml  story-execution.yaml
definitions/skills/occitan/: amassada.yaml  diagram-rendering.yaml
definitions/stances/: adversarial.yaml  builder.yaml  dreamer.yaml  moderator.yaml  realist.yaml
docs/: aporia-empirical-basis.md  deconstructive-empirical-basis.md  intake-output-format.md
docs/adrs/: ADR-C-001.md  ADR-O-002.md
docs/superpowers/plans/: 2026-06-18-aporia-discipline.md  (+6 more)
fondament-cli/: Cargo.toml
fondament-cli/src/: main.rs
fondament-cli/src/commands/: check.rs  graph.rs  mod.rs  resolve.rs  scaffold.rs  sweep.rs
fondament-core/: Cargo.toml
fondament-core/src/: address.rs  contribution.rs  definition.rs  error.rs  farga.rs  farga_http.rs  fondament.rs  lib.rs  resolver.rs  tools.rs  tree.rs  types.rs  watcher.rs
fondament-core/src/lint/: fast.rs  mod.rs  sweep.rs
fondament-core/tests/: address_tests.rs  lint_tests.rs  resolver_tests.rs  tree_tests.rs
fondament-server/: Cargo.toml
fondament-server/src/: lib.rs  main.rs
fondament-server/tests/: server_tests.rs
scripts/: lint_intake_output.py  lint_project_agents.py  test_lint_intake_output.py  test_lint_project_agents.py
(+13 files in other folders)
