[workspace]
members = ["fondament-core", "fondament-cli", "fondament-server"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
notify = "6"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
