[package]
name = "fondament-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
fondament-core = { path = "../fondament-core" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
