[package]
name = "fondament-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
notify = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
async-trait = { workspace = true }
