[package]
name = "fondament-server"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
fondament-core = { path = "../fondament-core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
tokio = { workspace = true }
